Fix crash on sending request while in edit mode, fix UI bug in horizontal layout

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -284,17 +284,23 @@ AppBody {
     layout: horizontal;
 
     & KeyValueInput {
-      layout: vertical;
-      & Button {
-        width: 100%;
+      dock: top;
+      & #key-value-inputs {
+        layout: vertical;
+        height: 3;
+        & Button {
+          width: 100%;
+        }
       }
+
     }
+
   }
   
   &.layout-vertical {
     layout: vertical;
     
-    & KeyValueInput {
+    & KeyValueInput #key-value-inputs {
       layout: horizontal;
     }
   }
