Fix footer in compact mode

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -27,6 +27,9 @@ Posting {
     }
 
     & Footer {
+      FooterKey {
+        margin-left: 1;
+      }
       padding-left: 0;
     }
     & .section {
